hphp/test/zend/good/ext/fileinfo/tests/config.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded('fileinfo')) {
    die("skip");
}
}
