hphp/test/zend/bad/ext/mysqli/tests/bug46614.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifconnectfailure.inc');
if (!defined("MYSQLI_ASYNC")) {
	die("skip mysqlnd only");
}
?>